login page input error alignment and overall dropdown inputfield alignment fixed

--- a/src/app/user-onboard/common-components/entity-table/entity-table.component.scss
+++ b/src/app/user-onboard/common-components/entity-table/entity-table.component.scss
@@ -114,9 +114,9 @@
   cursor: pointer;
 }
 
-.field-serial-no {
-  margin: 12px 1vw;
-}
+// .field-serial-no {
+//   margin: 12px 1vw;
+// }
 
 .custom-badge .mat-badge-content {
   background-color: #0073a5;
