--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -291,4 +291,5 @@ $font-14: 1.094vw;
   --scale-factor-button-font-24: 3;
 
   --scale-dropdown-list: 37.5;
+  --scale-input-field-padding: 2.125;
 }
